updating to my site

--- a/layouts/partials/sections/footer/copyright.html
+++ b/layouts/partials/sections/footer/copyright.html
@@ -19,6 +19,9 @@
                     Hugo Profile
                 </a>
             </div>
+            <div class="text-secondary">
+                LAND BACK
+            </div>
         </div>
     </div>
 </div>
