--- a/layouts/partials/sections/header.html
+++ b/layouts/partials/sections/header.html
@@ -21,6 +21,7 @@
 
 <!-- Navbar -->
 <header>
+    <a rel="me" href="https://dads.cool/@rainer"></a>
     <nav class="pt-3 navbar navbar-expand-lg {{ if .Site.Params.animate }}animate{{ end }}">
         <div class="container-fluid mx-xs-2 mx-sm-5 mx-md-5 mx-lg-5">
             <!-- navbar brand -->
